# Random_CPP

./: README.md
Quadratic_Solver/: CMakeLists.txt  README.md
Quadratic_Solver/include/: QuadEq.hpp
Quadratic_Solver/src/: QuadDriver.cpp  main.cpp
Testing_with_CPP/: README.md  test.cpp  to_test.cpp
